# kaldi

src/thirdpart/: CMakeLists.txt
src/thirdpart/asrlib/: CMakeLists.txt  asr.cc  asr.h
src/thirdpart/base/: CMakeLists.txt  kaldi-types.h
src/thirdpart/cudamatrix/: CMakeLists.txt
src/thirdpart/decoder/: CMakeLists.txt
src/thirdpart/feat/: CMakeLists.txt
src/thirdpart/featlibs/: CMakeLists.txt  apply-cmvn.cc  compute-cmvn-stats.cc  compute-kaldi-pitch-feats.cc  compute-mfcc-feats.cc  copy-feats.cc  kaldi-featlibs.h  paste-feats.cc  process-kaldi-pitch-feats.cc
src/thirdpart/fstext/: CMakeLists.txt
src/thirdpart/gmm/: CMakeLists.txt
src/thirdpart/hmm/: CMakeLists.txt
src/thirdpart/ivector/: CMakeLists.txt
src/thirdpart/lat/: CMakeLists.txt
src/thirdpart/latlibs/: CMakeLists.txt  kaldi-latlibs.h  lattice-best-path.cc  lattice-scale.cc
src/thirdpart/matrix/: CMakeLists.txt
src/thirdpart/model/asr/: final.dubm  final.mat  global_cmvn.stats  words.txt
src/thirdpart/nnet3/: CMakeLists.txt
src/thirdpart/nnet3libs/: CMakeLists.txt  kaldi-nnet3libs.h  nnet3-latgen-faster.cc
src/thirdpart/online2/: CMakeLists.txt
src/thirdpart/online2libs/: CMakeLists.txt  ivector-extract-online2.cc  kaldi-online2libs.h
src/thirdpart/test/: CMakeLists.txt  asr_test.cc
src/thirdpart/transform/: CMakeLists.txt
src/thirdpart/tree/: CMakeLists.txt
src/thirdpart/util/: CMakeLists.txt  kaldi-table-inl.h  kaldi-table.h
